@@ -1,0 +1,15 @@
+[% INCLUDE 'dist/intro' %]
+
+<h2>External Links</h2>
+
+[% distname = dist.dist %]
+<ul>
+<li><a href="http://search.cpan.org/dist/[% distname %]">search.cpan.org</a>
+<li><a href="http://cpan.uwinnipeg.ca/dist/[% distname %]">Kobes search</a>
+<li><a href="http://rt.cpan.org/NoAuth/Bugs.html?Dist=[% distname %]">rt.cpan.org</a>
+<li><a href="http://cpanratings.perl.org/d/[% distname %]">cpanratings.perl.org</a>
+<li><a href="http://testers.cpan.org/show/[% distname %].html">cpantesters</a>
+<li><a href="http://www.cpanforum.com/dist/[% distname %]">CPAN::Forum</a>
+<li><a href="http://search.cpan.org/src/[% dist.author.pauseid %]/[% dist.vname %]">browse source at search.cpan.org</a>
+</ul>
+
