@@ -4,6 +4,7 @@
 
 
 0.76-tobe
+    - moved external links from navbar into subpage
     - added BindLex to various Controllers
     - if only one dist/author is found, directly redirect to
       overview page
